# aiohttp-sse

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
CHANGES/: 163.misc  314.bugfix  370.bugfix  391.feature  421.misc  439.doc  README.rst
aiohttp_sse/: __init__.py  helpers.py
examples/: chat.py  graceful_shutdown.py  simple.py  simple_oldstyle.py
tests/: conftest.py  test_sse.py  test_sse_py35.py
