[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '''
/(
      \.git
    | venv
    | __pycache__
    | \.tox
)/
'''

[tool.towncrier]
package = "aiohttp_sse"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/aio-libs/aiohttp-sse/issues/{issue}>`_"
